# Network-Reachability

./: .gitignore  .metadata  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/api/: __404error.html  index.html  index.json  search.html
doc/api/core_constants_enums/: CircuitBreakerState-enum-sidebar.html  CircuitBreakerState.html  SecurityAlert-enum-sidebar.html  SecurityAlert.html  core_constants_enums-library-sidebar.html  core_constants_enums-library.html  index.html
doc/api/core_err_exceptions/: CircuitBreakerOpenException-class-sidebar.html  CircuitBreakerOpenException-class.html  NetworkReachabilityException-class-sidebar.html  NetworkReachabilityException-class.html  NetworkTimeoutException-class-sidebar.html  NetworkTimeoutException-class.html  PoorConnectionException-class-sidebar.html  PoorConnectionException-class.html  SecurityException-class-sidebar.html  SecurityException-class.html  core_err_exceptions-library-sidebar.html  core_err_exceptions-library.html  index.html
doc/api/core_extensions_model_extensions/: CaptivePortalStatusCopyWith-extension-sidebar.html  index.html  (+27 more)
example/: README.md  network_reachability_example.dart  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
integration_test/: simple_test.dart
ios/: Package.swift  flux_net.podspec  network_reachability.podspec
ios/Classes/: FluxNetPlugin.swift
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/network_reachability/: Package.swift
lib/: flux_net.dart  flux_net_method_channel.dart  flux_net_platform_interface.dart  flux_net_web.dart  main.dart  network_reachability.dart
lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt  flux_net_plugin.cc  flux_net_plugin_private.h
linux/test/: flux_net_plugin_test.cc
macos/: Package.swift  flux_net.podspec  network_reachability.podspec
macos/Classes/: FluxNetPlugin.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: connectivity.rs  constants.rs  engine.rs  mod.rs  models.rs  tests.rs  utils.rs
rust/src/api/analysis/: mod.rs  quality.rs  stats.rs
rust/src/api/engine/: mod.rs  sampler.rs  security.rs
rust/src/api/models/: config.rs  error.rs  mod.rs  net_info.rs  report.rs  target.rs
rust/src/api/probes/: base.rs  captive_portal.rs  dns.rs  interface.rs  local_scan.rs  mod.rs  target.rs  traceroute.rs
rust/src/api/probes/interfaces/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flux_net.podspec  rust_lib_network_reachability.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flux_net.podspec  rust_lib_network_reachability.podspec
rust_builder/windows/: CMakeLists.txt
test/: flux_net_method_channel_test.dart  flux_net_test.dart  network_reachability_test.dart
test/core/: circuit_breaker_test.dart  lifecycle_test.dart  performance_test.dart  security_quality_test.dart  stream_test.dart
test/mocks/: mock_rust_api.dart
windows/: CMakeLists.txt  flux_net_plugin.cpp  flux_net_plugin.h  flux_net_plugin_c_api.cpp
windows/test/: flux_net_plugin_test.cpp
(+2690 files in other folders)
