[package]
name = "network_reachability"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.101"
futures = "0.3.31"
chrono = "0.4"
async-trait = "0.1"
ipnet = "2.11.0"

# ── Native (non-web) dependencies ─────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
socket2 = "0.6.2"
trust-dns-resolver = "0.23.2"
dns-lookup = "3.0.1"
network-interface = "2.0.5"
surge-ping = "0.8.1"
reqwest = "0.13.2"

# ── Web / WASM dependencies ───────────────────────────────────────────────────
web-sys = { version = "0.3", features = [
    "Navigator",
    "NetworkInformation",
    "Window",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ResponseType",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
mockito = "1.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
