[package]
name = "network_reachability"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1.0.101"
futures = "0.3.31"
chrono = "0.4"
async-trait = "0.1"
ipnet = "2.11.0"
tokio = { version = "1.49.0", features = ["full"] }
socket2 = "0.6.2"
trust-dns-resolver = "0.23.2"
dns-lookup = "3.0.1"
network-interface = "2.0.5"
surge-ping = "0.8.1"
reqwest = "0.13.2"



[dev-dependencies]
mockito = "1.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true
